# trycli

./: .gitignore  README.md  REFACTORING.md  repomix-output.xml
.github/workflows/: deploy.yml
client/: Cargo.toml  build.rs  index.html  robots.txt  sitemap.xml  style.css
client/src/: api.rs  app.rs  dashboard.rs  lib.rs  main.rs  types.rs
client/src/components/: hamburger.rs  limit.rs  modal.rs  navbar.rs  protected.rs  terminal.rs
client/src/hooks/: landscape_lock.rs  mod.rs
client/src/pages/: admin.rs  analytics.rs  blogs.rs  create.rs  dashboard.rs  docs.rs  embed.rs  home.rs  notfound.rs  outage.rs  policy.rs  view.rs
client/styles/: 01-base.css  02-navigation.css  03-buttons-inputs.css  04-layout.css  05-terminal.css  06-dashboard.css  07-landing.css  08-footer-docs.css  09-utilities.css  10-analytics.css
server/: Cargo.toml
server/.sqlx/: query-22020954d4903e012ede17f1539309a4eb868333a0a46c4a9555dd931632de21.json  query-69b8160b73194fe35de9dd78db31f0ef95829f728a02813cf3f1b3f0e58abbdd.json  query-eb511dca6323176265ec80d3ba6421e7135ac529245adf66e9bf7942a61892c9.json  query-fa31fdab92e5c973239b559d6e1d7dd0dbc018182d77ab512fdaaea6beeb852d.json
server/migrations/: 20260201173010_initial_setup.down.sql  20260201173010_initial_setup.up.sql  20260208095110_add_view_counts.down.sql  20260208095110_add_view_counts.up.sql  20260208120000_add_security_fields.down.sql  20260208120000_add_security_fields.up.sql  20260208200217_add_embed_token.down.sql  20260208200217_add_embed_token.up.sql  20260209090000_add_analytics_events.down.sql  20260209090000_add_analytics_events.up.sql  20260210000000_secure_embed_schema.up.sql  20260211090000_add_embed_token_to_projects.down.sql  20260211090000_add_embed_token_to_projects.up.sql  20260217171453_add_public_flag.down.sql  20260217171453_add_public_flag.up.sql  20260218005516_normalize_users.down.sql  20260218005516_normalize_users.up.sql
server/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  router.rs  state.rs
server/src/handlers/: admin.rs  analytics.rs  auth.rs  oembed.rs  project.rs  spawn.rs
server/src/services/: docker.rs  websocket.rs
