[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "HtmlDivElement", "console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
leptos_router = { version = "0.6", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
pulldown-cmark = "0.13.0"
gloo-net = "0.5" 


