[package]
name = "client"
version = "0.1.0"
edition = "2021" # Changed from 2024 (standard is 2021)

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CORE FRAMEWORK 
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] } 

# WEB UTILITIES
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "HtmlDivElement", "console", "Window", "Navigator", "Clipboard"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"

# DATA & NETWORK
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# MARKDOWN
pulldown-cmark = "0.13.0"