[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
bollard = "0.17" # The Docker Client
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
oauth2 = "4.4"
tower-sessions = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
dotenvy = "0.15" # To load client secrets
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
time = "0.3.46"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
url = "2.5.8"
